--- a/www/index.html
+++ b/www/index.html
@@ -22,11 +22,11 @@ function onDeviceReady() {
 	ready = true;
 }
 
-while(ready == true)
+while(ready != true)
 {
-	young_log("ready detected.");
+	; // do nothing
 }
-
+young_log("ready detected.");
 
 //---------------------------
 
