--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@ function onDeviceReady() {
 	young_log("in onDeviceReady");
 	ready = true;
 }
-
+young_log("before while.");
 while(ready != true)
 {
 	; // do nothing
