--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@ function onDeviceReady() {
 	ready = true;
 }
 young_log("before while.");
-while(true)
+/*while(true)
 {
 	if(ready == true)
 	{
@@ -30,6 +30,9 @@ while(true)
 	}
 }
 young_log("ready detected.");
+*/
+
+young_log("ready:" + ready);
 
 //---------------------------
 
