--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@ var ready = false;
 function onDeviceReady() {
 	young_log("in onDeviceReady");
 	ready = true;
+	young_log("ready1:" + ready);
 }
 young_log("before while.");
 /*while(true)
