--- a/www/index.html
+++ b/www/index.html
@@ -19,8 +19,9 @@ young_log("init01");
 var ready = false;
 function onDeviceReady() {
 	young_log("in onDeviceReady");
-	ready = true;
 	young_log("ready1:" + ready);
+	ready = true;
+	young_log("ready2:" + ready);
 }
 young_log("before while.");
 /*while(true)
