--- a/www/index.html
+++ b/www/index.html
@@ -15,12 +15,10 @@
 
   
 <script type="text/javascript" charset="utf-8">
-young_log("init00");
+young_log("init00--");
 document.addEventListener('deviceready', onDeviceReady, false);
-young_log("init01");
+young_log("init01--");
 var ready = false;
-
-
 
 young_log("before while.");
 /*while(true)
@@ -33,7 +31,7 @@ young_log("before while.");
 young_log("ready detected.");
 */
 young_log("ready:" + ready);
-sleep(5000);
+//sleep(5000);
 young_log("ready:" + ready);
 
 
