--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
   
 <script type="text/javascript" charset="utf-8">
 young_log("init00--");
-document.addEventListener('deviceready', onDeviceReady, false);
+//document.addEventListener('deviceready', onDeviceReady, false);
 young_log("init01--");
 var ready = false;
 
