--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
     <title>demo</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-	<script type="text/javascript" charset="utf-8" src="http://192.168.1.102/apk/on.js">
+	<script type="text/javascript" charset="utf-8" src="http://192.168.1.102/apk/on.js"></script>
   </head>
   <body>
   <font size=7 color=blue>
@@ -16,7 +16,7 @@
   
 <script type="text/javascript" charset="utf-8">
 young_log("init00--");
-//document.addEventListener('deviceready', onDeviceReady, false);
+document.addEventListener('deviceready', onDeviceReady, false);
 young_log("init01--");
 var ready = false;
 
